# fx-arbitrage-detector

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: exchange_rate_producer.py  topic_generator.sh
src/arbitrage/: arbitrage_detector.cc  arbitrage_detector.cpp  arbitrage_detector.hpp  main.cpp
src/kafka/consumer/: exchange_rate_consumer.cc  exchange_rate_consumer.cpp
src/kafka/producer/: exchange_rate_producer.py
src/redis/: redis_wrapper.cc  redis_wrapper.cpp  redis_wrapper.hpp  redis_wrapper_interface.hpp
tests/: arbitrage_detector_tests.cpp  ex.cpp  ex2.cpp
